# reconnection_roguelike

./: Cargo.toml  reconnection.pyxel  workspace.code-workspace
design/: reconnection_16x24.pyxel  reconnection_16x24_dark.pyxel  reconnection_32x32.pyxel
notes/: questions.md  tasks.txt
rebuild/: Cargo.toml
rebuild/src/: components.rs  lib.rs  main.rs  map.rs  types.rs  ui.rs  world.rs
rebuild/src/ui/: camera.rs  common.rs  menus.rs  messages.rs  player_in_world.rs  stats.rs  tooltips.rs  units.rs  utils.rs
rebuild/src/ui/player_in_world/: controller.rs  view.rs
rebuild/src/ui/units/: screen_chars.rs  text.rs
rebuild/src/world/: player.rs  spawner.rs  systems.rs  types.rs  units.rs
rebuild/src/world/systems/: map_indexing.rs  melee_combat.rs  monster_ai.rs  movement.rs  visibility.rs
reconnection/: Cargo.toml
reconnection/src/: player.rs  ui.rs
reconnection/src/ui/: stats.rs  utils.rs
reconnection/src/ui/player_in_world/: controller.rs
reconnection/src/ui/units/: pixels.rs  tiles1x.rs  tiles2x.rs
reconnection/src/world/: player.rs
reconnection/src/world/systems/: monster_ai.rs  movement.rs  visibility.rs
resources/: reconnection_closeups_160x240.pyxel
src/: camera.rs  components.rs  damage_system.rs  gui.rs  inventory_system.rs  lib.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  message_log.rs  monster_ai_system.rs  player.rs  spawner.rs  tests.rs  types.rs  ui.rs  visibility_system.rs  world.rs
src/tests/: ui_units.rs  units.rs
src/tests/ui_units/: base.rs  box2d.rs  pixels.rs  point_and_size.rs  pos_x_y.rs  text.rs  tiles.rs  tiles1x.rs  tiles2x.rs
src/ui/: bterm_common.rs  bterm_tiled.rs  camera.rs  colors.rs  common.rs  keyboard.rs  player_in_world.rs  tooltips.rs  traits.rs  units.rs  utils.rs
src/ui/bterm_common/: colors.rs  keyboard.rs  utils.rs
src/ui/bterm_tiled/: main_view.rs  menus.rs  ui.rs
src/ui/input/: keybindings.rs
src/ui/player_in_world/: controller.rs  view.rs
src/ui/systems/: input.rs
src/ui/units/: base.rs  box2d.rs  pixels.rs  point_and_size.rs  pos_x_y.rs  text.rs  tiles.rs  tiles1x.rs  tiles2x.rs  traits.rs
src/world/: actors.rs  components.rs  engine.rs  player.rs  spawner.rs  systems.rs  types.rs
src/world/systems/: damage.rs  inventory.rs  monster_ai.rs  movement.rs
units/: Cargo.toml
units-derive/: Cargo.toml
units-derive/src/: lib.rs
units-proc-macros/: Cargo.toml
units-proc-macros/src/: integer.rs  lib.rs  utils.rs
units/src/: base.rs  box2d.rs  example.rs  integer.rs  integer_system.rs  lib.rs  point_and_size.rs  position.rs  size.rs  test.rs  tests.rs  tiles2x.rs  traits.rs  utils.rs
units/src/box2d/: base.rs  compatibility.rs  new.rs  split.rs
units/src/position/: pos_x.rs  pos_y.rs  position_2d.rs
units/src/position/position_2d/: base.rs  compatibility.rs  ops.rs
units/src/size/: height.rs  size2d.rs  width.rs
units/src/test/: base.rs  box2d.rs  position.rs  size.rs
units/src/tests/: base.rs  box2d.rs  pixels.rs  point_and_size.rs  position.rs  size.rs  text.rs  tiles1x.rs  tiles2x.rs
