[package]
name = "reconnection_roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "0.8.1", features = ["specs", "serde"] }
bracket-algorithm-traits = { version = "~0.8.2" }
bracket-color = { version = "~0.8.2", features = [ "palette" ] }
bracket-geometry = { version = "~0.8.2" }
bracket-noise = { version = "~0.8.2" }
bracket-pathfinding = { version = "~0.8.2" }
bracket-random = {  version = "~0.8.2", features = [ "parsing" ] }
bracket-terminal = { version = "~0.8.2" }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
