[package]
name = "reconnection"
version = "0.1.0"
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
units = { path = "../units"}
bracket-lib = { version = "~0.8", features = ["specs", "serde"] }
bracket-algorithm-traits = { version = "~0.8" }
bracket-color = { version = "~0.8" }
bracket-geometry = { version = "~0.8" }
bracket-pathfinding = { version = "~0.8" }
bracket-terminal = { version = "~0.8" }
specs = { version = "~0.18", features = ["serde"] }
specs-derive = { version = "~0.4" }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
statig = { version = "0.3.0", features = ["macro", "serde"] }
derive_more = "0.99.17"
